# AprilTags

./: .clang-format  CMakeLists.txt  README.txt
AprilTags/: Edge.h  FloatImage.h  GLine2D.h  GLineSegment2D.h  Gaussian.h  GrayModel.h  Gridder.h  Homography33.h  MathUtil.h  Quad.h  Segment.h  Tag16h5.h  Tag16h5_other.h  Tag25h7.h  Tag25h9.h  Tag36h11.h  Tag36h11_other.h  Tag36h9.h  TagDetection.h  TagDetector.h  TagFamily.h  UnionFindSimple.h  XYWeight.h
cmake/: apriltagsConfig.cmake
example/: Serial.cpp  Serial.h  apriltags_demo.cpp  demo.cpp  imu.cpp
src/: Edge.cc  TagDetector.cc  TagFamily.cc
